--- a/hw4.Rmd
+++ b/hw4.Rmd
@@ -6,8 +6,9 @@ date: "2024-11-21"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 data <- read.table("gauge.txt",  header = TRUE)
+library(pander)
 ```
 
 # 0. Contribution Statement
@@ -39,7 +40,7 @@ Student 2 mainly worked on questions ...
 We will plot the data points and fit the regression line.
 ```{r echo=FALSE}
 model <- lm(gain ~ density, data = data) # fit a regression model
-summary(model)
+pander(summary(model))
 
 # graph: scatterplot
 plot(data$density, data$gain, main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks', xlab = 'Density of Polyethylene Blocks', ylab = 'Gamma Ray Intensity')
@@ -74,10 +75,10 @@ A density plot of our residuals shows that the density of our residuals is skewe
 ### Analysis
 We will need to transform our data if our data is skewed and does not resemble a bell curve. We can test whether our data comes from a normally distributed population with a Shapiro-Wilk test. Our null hypothesis is that our data does come from a normally distributed population.
 
-```{r}
+```{r echo=FALSE}
 set.seed(123)
 shapiro_result <- shapiro.test(data$gain)
-print(shapiro_result)
+pander(shapiro_result)
 ```
 With a p-value of 4.599 * 10^(-9) < 0.05, we reject the null hypothesis. This suggests our data is _not_ normally distributed. 
 
@@ -92,7 +93,7 @@ To find a fitting transformation for our data, we experimented with a log transf
 ```{r echo=FALSE}
 data$lggain <- log(data$gain)
 log_model <- lm(lggain ~ density, data = data) # fit a regression model
-summary(log_model)
+pander(summary(log_model))
 
 # graph: scatterplot
 plot(data$density, data$lggain, main = 'Log Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks', xlab = 'Density of Polyethylene Blocks', ylab = 'Log of Gamma Ray Intensity')
@@ -133,9 +134,13 @@ With a p-value of 0.0002461< 0.05, we reject the null hypothesis. Although this 
 
 The log transformation on predicted gamma ray density is appropriate for fitting the data to a linear model. The visualizations of the model itself, its residuals, as well as a QQ plot show us that the log transformation allowed the data to fit a linear model very well. Although the log transformation failed to completely transform the distribution of predicted gamma ray density into a normal distribution, it significantly reduced the non-linearity of its distribution. 
 
+\pagebreak
+
 ## Question 3: ROBUSTNESS
 ### Methods
+
 If the densities of the polyethylene blocks are not reported exactly, we can use the error term in the prediction interval to take into account the variability in the gamma ray intensity (the gain).
+
 ```{r}
 # Define true relationship parameters (arbitrarily chosen)
 A <- 150
@@ -159,9 +164,10 @@ true_gains <- A * exp(beta * true_densities) # theoretical values, no noise
 noise_fit <- lm(log(true_gains) ~ recorded_densities)
 fitted_gains <- exp(coef(noise_fit)[1]) * exp(coef(noise_fit)[2] * recorded_densities) # predicted y with noise
 ```
+
 We have generated synthetic data that includes noise for the densities, fit a model to predict gains based on the densities with noise, and created predictions of the gains using the newly fitted model.
 
-```{r}
+```{r echo=FALSE}
 library(ggplot2)
 noise_data <- data.frame(Density = recorded_densities, True_Gains = true_gains, Fitted_Gains = fitted_gains)
 ggplot(noise_data, aes(x = Density)) +
@@ -172,6 +178,7 @@ ggplot(noise_data, aes(x = Density)) +
     y = 'Observed Gamma Ray Intensity (Gain)'
   )
 ```
+
 Based on the graph above, our new model that accounts for noise in density closely predicts the true gains from our dataset! Below, we will plot the residuals of the model. 
 
 ```{r echo=FALSE}
@@ -183,20 +190,76 @@ abline(0,0)
 qqnorm(res_noise)
 qqline(res_noise)
 ```
+
 After accounting for noise, it seems as though our residuals follow the line y = x more closely; our residuals are closer to being normally distributed than in our previous model. 
+
 ### Analysis
 We will extract the residuals from our model that accounts for noise in density and use the ```{r} shapiro.test()``` function on the residuals. Our null hypothesis is that the residuals are normally distributed.
 ```{r}
 set.seed(123)
 shapiro_result_noise <- shapiro.test(res_noise)
-print(shapiro_result_noise)
+pander(shapiro_result_noise)
 ```
-Since the p-value = 0.9707 > 0.05, we reject the null hypothesis. The residuals are normally distributed, so accounting for variations in the densities of the polyethylene blocks _does_ result in a more accurate fit.
+
+Since the p-value = 0.9707 > 0.05, we fail to reject the null hypothesis. The residuals are normally distributed, so accounting for variations in the densities of the polyethylene blocks _does_ result in a more accurate fit.
 
 ### Conclusion
+
 We created a new model under the assumption that densities of the polyethylene blocks were not reported exactly. Since the residuals closely align the 45-degree line in the QQ plot and a Shapiro-Wilk test confirms the residuals are normally distributed, our new fitted model that accounts for variation in densities performs _better_ than without accounting for variations. 
 
 ## Question 4: FORWARD PREDICTION
+### Methods
+Below is the basic summary of our data.
+
+```{r echo=FALSE}
+library(pander)
+pander(summary(data[c('gain', 'density')]))
+```
+
+We will reuse our model from Question #1 and now include confidence intervals in our visualization to represent the uncertainty bands.
+
+```{r echo=FALSE}
+model <- lm(gain ~ density, data = data) # fit a regression model
+
+# Generate predictions with confidence intervals
+predictions <- predict(model, newdata = data.frame(density = data$density), 
+                       interval = "confidence", level = 0.95)
+
+# Plot the scatterplot
+plot(data$density, data$gain, 
+     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks', 
+     xlab = 'Density of Polyethylene Blocks', 
+     ylab = 'Gamma Ray Intensity')
+
+# Add the regression line
+abline(model, col = 'red')
+
+# Add confidence intervals as shaded bands
+# Sort values for proper plotting
+sorted_indices <- order(data$density)
+lines(data$density[sorted_indices], predictions[sorted_indices, "lwr"], col = "green", lty = 2) # Lower CI
+lines(data$density[sorted_indices], predictions[sorted_indices, "upr"], col = "green", lty = 2) # Upper CI
+
+# Alternatively, use polygon to fill the area
+polygon(c(data$density[sorted_indices], rev(data$density[sorted_indices])),
+        c(predictions[sorted_indices, "lwr"], rev(predictions[sorted_indices, "upr"])),
+        col = rgb(0, 1, 0, 0.2), border = NA) # Semi-transparent green
+
+```
+
+### Analysis
+
+From our visualization with the confidence intervals included, it is clear that there are two specific densities whos gain measurements are accurately predicted by the model: 0.1 and 0.5. The predicted gain measurements include the actual gain measurements of those values. Additionally, the recorded densities between these measures fall relatively close to to the linear model in comparison to densities that fall outside of this interval. This can also be visualized in the residual plot of this model, where the predicted gains of densities in this interval are [0, 300]. The residuals within this interval are much closer to 0 than residuals outside this interval.
+
+```{r echo=FALSE}
+res <- resid(model)
+plot(fitted(model), res, xlab='Predicted Gamma Ray Intensity', ylab = 'Residuals', main = 'Residual vs. Fitted Plot of Model')
+abline(0,0)
+```
+
+### Conclusion
+
+Based on both the linear model as well as the residual plot, it is reasonable to conclude that some gains can be predicted more accurately than others. This is best represented by the density interval [0.1, 0.5]. On the linear model plot, the data points within this interval fall within the confidence interval or very close to it compared to data points that are outside the interval. The residual plot reinforces this idea, as the predicted gains of densities within this interval are closer to 0 than the predicted gains of densities outside of this interval.
 
 ## Question 5: REVERSE PREDICTION
 
