--- a/hw4.Rmd
+++ b/hw4.Rmd
@@ -15,7 +15,7 @@ library(pander)
 
 ## Student 1
 
-Student 1 mainly worked on questions...
+Student 1 mainly worked on questions 1, 3, 5, and the advanced analysis. 
 
 ## Student 2
 
@@ -63,7 +63,6 @@ Additionally, we can plot a QQ plot to check if the residuals are normally distr
 qqnorm(res)
 qqline(res)
 ```
-
 In general, the points on the plot do not fall closely to the line. The points form an 'S-shape', are staggered, and clearly deviate from the 45-degree reference line, which indicates the residuals not normally distributed. 
 
 ```{r echo=FALSE}
@@ -345,5 +344,35 @@ The reverse prediction was fairly accurate for the lower estimate where the gamm
 ## Question 6: CROSS-VALIDATION
 
 # Advanced Analysis
+In the basic analysis, we fit our data to a linear model and explore why a linear model is not fully representative of the data. In the following section, we will create a fit our data to a nonlinear model using nls(). We are interested in exploring accurately how a **nonlinear least squares** model predicts gamma ray intensity.
+### Methods
+```{r echo=FALSE}
+nls_fx <- function(density, A, beta){
+  A * exp(beta * density) # from the write-up: g = A * e^(beta * d)
+}
+nls_model <- nls(gain ~ nls_fx(density, A, beta), data = data, start = list(A = 400, beta = -1))
+
+# Plot the scatterplot
+plot(data$density, data$gain, 
+     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks', 
+     xlab = 'Density of Polyethylene Blocks', 
+     ylab = 'Gamma Ray Intensity')
+
+lines(data$density, predictions, col='red')
+
+```
+Above, we can the the nonlinear least squares model almost fits the data perfectly!
+### Analysis
+```{r echo=FALSE}
+summary(nls_model)
+res <- residuals(nls_model)
+rss <- sum(res ** 2) # residual sum of squares
+tss <- sum((data$gain - mean(data$gain)) ** 2)
+r_squared <- 1 - (rss / tss) # 0.998
+mse <- mean(res ** 2) # 35.345
+```
+After looking at the summary statistics of our NLS Model, we can see we have an R^2 value of 0.998 and an MSE of 35.345.
+### Conclusion
+The nonlinear least squares model is a great fit for our data! The R^2 value of 0.998 means that **99.8% of the variance** in the intensity of gamma rays (gain) can be explain by the model. The MSE value of 35.346 is also good; since our Gain values range from ```min(data$gain)``` = 16.2 to ```max(data$gain)``` = 436, the model's predictions are generally close to the actual values. The errors are not excessively large. The average squared error is relatively small compared to the entire range. 
 
 # Conclusion & Discussion
