--- a/hw4.Rmd
+++ b/hw4.Rmd
@@ -265,15 +265,15 @@ Based on both the linear model as well as the residual plot, it is reasonable to
 We will start by inverting our model from Question 1, which has the original untransformed scale.
 ```{r echo=FALSE}
 # Use an inverted model, where we predict density from gain
-inverted_model <- lm(density ~ gain, data = data) 
+inverted_model <- lm(density ~ gain, data = data)
 
 # Generate predictions with confidence intervals
 predictions <- predict(inverted_model, newdata = data.frame(gain = data$gain), interval = 'confidence', level = 0.95)
 
 # Plot the scatterplot
-plot(data$gain, data$density, 
-     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks', 
-     xlab = 'Gamma Ray Intensity', 
+plot(data$gain, data$density,
+     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks',
+     xlab = 'Gamma Ray Intensity',
      ylab = 'Density of Polyethylene Blocks')
 
 # Add regression line
@@ -290,7 +290,7 @@ polygon(c(data$gain[sorted_indices], rev(data$gain[sorted_indices])),
         c(predictions[sorted_indices, "lwr"], rev(predictions[sorted_indices, "upr"])),
         col = rgb(0, 1, 0, 0.2), border = NA) # Semi-transparent green
 ```
-Above, we have our regression line for the inverse graph plotted with a 95% confidence interval for predicting density of polytheylene blocks from gamma ray intensity (gain). From eyeballing the graph, it seems as though we mostly capture the true density of polyethylene blocks in our 95% confidence interval when the gamma ray intensity is around 25 or close to 300. 
+Above, we have our regression line for the inverse graph plotted with a 95% confidence interval for predicting density of polytheylene blocks from gamma ray intensity (gain). From eyeballing the graph, it seems as though we mostly capture the true density of polyethylene blocks in our 95% confidence interval when the gamma ray intensity is around 25 or close to 300.
 
 ### Analysis
 **POINT ESTIMATE FOR GAMMA RAY INTENSITY (GAIN) OF 38.6 AND 426.7**
@@ -316,9 +316,9 @@ The inverted model predicts polyethylene blocks with a gain of 38.6 have a densi
 
 ```{r echo=FALSE}
 # Plot the scatterplot
-plot(data$gain, data$density, 
-     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks', 
-     xlab = 'Gamma Ray Intensity', 
+plot(data$gain, data$density,
+     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks',
+     xlab = 'Gamma Ray Intensity',
      ylab = 'Density of Polyethylene Blocks')
 
 abline(inverted_model, col = 'red') # Add regression line
@@ -335,13 +335,52 @@ polygon(c(data$gain[sorted_indices], rev(data$gain[sorted_indices])),
         c(predictions[sorted_indices, "lwr"], rev(predictions[sorted_indices, "upr"])),
         col = rgb(0, 1, 0, 0.2), border = NA) # Semi-transparent green
 ```
-In the graph above, the predictions for the gamma ray intensities of 38.6 and 426.7 are denoted by where the dashed blue lines intersect with the red line, our regression/ prediction line. The green line is our prediction interval. Note that for the gamma ray intensity of 38.6, our prediction is fairly close to the observed density value of 0.508; indeed, our point estimate of 0.491 is very close to the true value of 0.508 and the true value does lie in our prediction interval. However, for the gamma ray intensity of 426.7, we predict a density of -0.105. This is extrapolation, and does not make sense in our context, since we cannot have negative gamma ray densities. The true density for a gamma ray intensity of 426.7 was 0.001. The reason why our model is unable to estimate high values accurately is because the data does not follow a linear pattern, but we are using a linear model to make inferences on it. 
+In the graph above, the predictions for the gamma ray intensities of 38.6 and 426.7 are denoted by where the dashed blue lines intersect with the red line, our regression/ prediction line. The green line is our prediction interval. Note that for the gamma ray intensity of 38.6, our prediction is fairly close to the observed density value of 0.508; indeed, our point estimate of 0.491 is very close to the true value of 0.508 and the true value does lie in our prediction interval. However, for the gamma ray intensity of 426.7, we predict a density of -0.105. This is extrapolation, and does not make sense in our context, since we cannot have negative gamma ray densities. The true density for a gamma ray intensity of 426.7 was 0.001. The reason why our model is unable to estimate high values accurately is because the data does not follow a linear pattern, but we are using a linear model to make inferences on it.
 
 ### Conclusion
 The reverse prediction was fairly accurate for the lower estimate where the gamma ray intensity was 38.6. However, for a higher value, such as 426.7, the model failed to make a reasonable prediction such it yielded a negative number. Since our graph is nonlinear, it is evident that most accurate predictions made occur between low and moderately-high gamma ray intensity levels. Our graph's concaved curve means that data in the middle sector will most likely be overestimated, and extreme high values will wrongfully be estimated as negative. Likewise, extreme low values will incorrectly be underestimated.
 
 
 ## Question 6: CROSS-VALIDATION
+
+### Methods
+
+In order to test the reverse prediction model, we first omit the set of measurements corresponding to the block of density 0.508 and train the forward model on the subset.
+
+```{r}
+dataset <- read.table("gauge.txt",  header = TRUE)
+no_0.508 <- dataset[dataset$density != 0.508, ]
+
+inverted_model <- lm(density ~ gain, data = no_0.508) 
+predictions <- predict(inverted_model, newdata = data.frame(gain = no_0.508$gain), interval = 'confidence', level = 0.95)
+
+# Plot the scatterplot
+plot(no_0.508$gain, no_0.508$density,
+     main = 'Inverse Model without Density = 0.508',
+     xlab = 'Gamma Ray Intensity',
+     ylab = 'Density of Polyethylene Blocks')
+
+# Add regression line
+abline(inverted_model, col = 'red')
+
+# Add confidence intervals as shaded bands
+# Sort values for proper plotting
+sorted_indices <- order(no_0.508$gain)
+lines(no_0.508$gain[sorted_indices], predictions[sorted_indices, "lwr"], col = "green", lty = 2) # Lower CI
+lines(no_0.508$gain[sorted_indices], predictions[sorted_indices, "upr"], col = "green", lty = 2) # Upper CI
+
+# Alternatively, use polygon to fill the area
+polygon(c(no_0.508$gain[sorted_indices], rev(no_0.508$gain[sorted_indices])),
+        c(predictions[sorted_indices, "lwr"], rev(predictions[sorted_indices, "upr"])),
+        col = rgb(0, 1, 0, 0.2), border = NA) # Semi-transparent green
+```
+
+We also performed this test on a subset of the data without the block of density 0.001. 
+
+
+### Analysis
+
+### Conclusion
 
 # Advanced Analysis
 In the basic analysis, we fit our data to a linear model and explore why a linear model is not fully representative of the data. In the following section, we will create a fit our data to a nonlinear model using nls(). We are interested in exploring accurately how a **nonlinear least squares** model predicts gamma ray intensity.
@@ -353,9 +392,9 @@ nls_fx <- function(density, A, beta){
 nls_model <- nls(gain ~ nls_fx(density, A, beta), data = data, start = list(A = 400, beta = -1))
 
 # Plot the scatterplot
-plot(data$density, data$gain, 
-     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks', 
-     xlab = 'Density of Polyethylene Blocks', 
+plot(data$density, data$gain,
+     main = 'Gamma Ray Intensity as a Function of the Density of Polyethylene Blocks',
+     xlab = 'Density of Polyethylene Blocks',
      ylab = 'Gamma Ray Intensity')
 
 lines(data$density, predictions, col='red')
@@ -373,6 +412,6 @@ mse <- mean(res ** 2) # 35.345
 ```
 After looking at the summary statistics of our NLS Model, we can see we have an R^2 value of 0.998 and an MSE of 35.345.
 ### Conclusion
-The nonlinear least squares model is a great fit for our data! The R^2 value of 0.998 means that **99.8% of the variance** in the intensity of gamma rays (gain) can be explain by the model. The MSE value of 35.346 is also good; since our Gain values range from ```min(data$gain)``` = 16.2 to ```max(data$gain)``` = 436, the model's predictions are generally close to the actual values. The errors are not excessively large. The average squared error is relatively small compared to the entire range. 
+The nonlinear least squares model is a great fit for our data! The R^2 value of 0.998 means that **99.8% of the variance** in the intensity of gamma rays (gain) can be explain by the model. The MSE value of 35.346 is also good; since our Gain values range from ```min(data$gain)``` = 16.2 to ```max(data$gain)``` = 436, the model's predictions are generally close to the actual values. The errors are not excessively large. The average squared error is relatively small compared to the entire range.
 
 # Conclusion & Discussion
