--- a/hw4.Rmd
+++ b/hw4.Rmd
@@ -273,8 +273,8 @@ We will start by inverting our model from Question 1, which has the original unt
 # Use an inverted model, where we predict density from gain
 inverted_model <- lm(density ~ gain, data = data)
 
-# Generate predictions with confidence intervals
-predictions <- predict(inverted_model, newdata = data.frame(gain = data$gain), interval = 'confidence', level = 0.95)
+# Generate predictions with prediction intervals
+predictions <- predict(inverted_model, newdata = data.frame(gain = data$gain), interval = 'prediction')
 
 # Plot the scatterplot
 plot(data$gain, data$density,
@@ -315,8 +315,10 @@ point_estimate2 <- beta_0 + beta_1 * 426.7 # Point estimate: -0.105
 ``` {r echo=FALSE}
 # Make prediction intervals
 predictions <- predict(inverted_model, newdata = data.frame(gain = data$gain), interval = "prediction")
+# Specific prediction intervals for gamma ray intensities 38.6 and 426.7
+specific_preds <- predict(inverted_model, newdata = data.frame(gain = c(38.6, 426.7)), interval = "prediction")
 ```
-The inverted model predicts polyethylene blocks with a gain of 38.6 have a density that falls in the range of [0.295, 0.686] with a point estimate at 0.491. It also predicts polyethylene blocks with a gain of 426.7 have a density that falls in the range of [-0.305, 0.01] with a point estimate at -0.105.
+The inverted model predicts polyethylene blocks with a gain of 38.6 have a density that falls in the range of [0.344, 0.686] with a point estimate at 0.511. It also predicts polyethylene blocks with a gain of 426.7 have a density that falls in the range of [-0.458, 0.01] with a point estimate at -0.278.
 
 ### Analysis
 
@@ -341,7 +343,7 @@ polygon(c(data$gain[sorted_indices], rev(data$gain[sorted_indices])),
         c(predictions[sorted_indices, "lwr"], rev(predictions[sorted_indices, "upr"])),
         col = rgb(0, 1, 0, 0.2), border = NA) # Semi-transparent green
 ```
-In the graph above, the predictions for the gamma ray intensities of 38.6 and 426.7 are denoted by where the dashed blue lines intersect with the red line, our regression/ prediction line. The green line is our prediction interval. Note that for the gamma ray intensity of 38.6, our prediction is fairly close to the observed density value of 0.508; indeed, our point estimate of 0.491 is very close to the true value of 0.508 and the true value does lie in our prediction interval. However, for the gamma ray intensity of 426.7, we predict a density of -0.105. This is extrapolation, and does not make sense in our context, since we cannot have negative gamma ray densities. The true density for a gamma ray intensity of 426.7 was 0.001. The reason why our model is unable to estimate high values accurately is because the data does not follow a linear pattern, but we are using a linear model to make inferences on it.
+In the graph above, the predictions for the gamma ray intensities of 38.6 and 426.7 are denoted by where the dashed blue lines intersect with the red line, our regression/ prediction line. The green line is our prediction interval, which represents the range where a single observation is expected to fall. Note that for the gamma ray intensity of 38.6, our prediction is fairly close to the observed density value of 0.508; indeed, our point estimate of 0.511 is very close to the true value of 0.508 and the true value does lie in our prediction interval. However, for the gamma ray intensity of 426.7, we predict a density of -0.278. This is extrapolation, and does not make sense in our context, since we cannot have negative gamma ray densities. The true density for a gamma ray intensity of 426.7 was 0.001. The reason why our model is unable to estimate high values accurately is because the data does not follow a linear pattern, but we are using a linear model to make inferences on it.
 
 ### Conclusion
 The reverse prediction was fairly accurate for the lower estimate where the gamma ray intensity was 38.6. However, for a higher value, such as 426.7, the model failed to make a reasonable prediction such it yielded a negative number. Since our graph is nonlinear, it is evident that most accurate predictions made occur between low and moderately-high gamma ray intensity levels. Our graph's concaved curve means that data in the middle sector will most likely be overestimated, and extreme high values will wrongfully be estimated as negative. Likewise, extreme low values will incorrectly be underestimated.
