--- a/hw4.Rmd
+++ b/hw4.Rmd
@@ -25,8 +25,6 @@ Student 1 mainly worked on questions 1, 3, 5, and the advanced analysis.
 
 Student 2 mainly worked on questions 2, 4, 6, and the introduction and conclusion.
 
-\pagebreak
-
 \pagenumbering{arabic}
 
 # Introduction
@@ -370,6 +368,7 @@ plot(no_0.508$gain, no_0.508$density,
 
 # Add regression line
 abline(inverted_model, col = 'red')
+abline(v = c(38.6), col = "blue", lwd = 2, lty = 2) # Add horizontal line
 
 # Add confidence intervals as shaded bands
 # Sort values for proper plotting
@@ -381,6 +380,12 @@ lines(no_0.508$gain[sorted_indices], predictions[sorted_indices, "upr"], col = "
 polygon(c(no_0.508$gain[sorted_indices], rev(no_0.508$gain[sorted_indices])),
         c(predictions[sorted_indices, "lwr"], rev(predictions[sorted_indices, "upr"])),
         col = rgb(0, 1, 0, 0.2), border = NA) # Semi-transparent green
+```
+
+The confidence interval for the estimation of a block with an average reading of 38.6 for this model is as follows.
+
+```{r}
+pander(predict(inverted_model, newdata = data.frame(gain = 38.6), interval = 'confidence', level = 0.95))
 ```
 
 We also performed this test on a subset of the data without the block of density 0.001. 
@@ -400,6 +405,7 @@ plot(no_0.001$gain, no_0.001$density,
 
 # Add regression line
 abline(inverted_model, col = 'red')
+abline(v = c(38.6), col = "blue", lwd = 2, lty = 2) # Add horizontal line
 
 # Add confidence intervals as shaded bands
 # Sort values for proper plotting
@@ -413,9 +419,19 @@ polygon(c(no_0.001$gain[sorted_indices], rev(no_0.001$gain[sorted_indices])),
         col = rgb(0, 1, 0, 0.2), border = NA) # Semi-transparent green
 ```
 
+The confidence interval for the estimation of a block with an average reading of 38.6 for this model is as follows.
+
+```{r}
+pander(predict(inverted_model, newdata = data.frame(gain = 38.6), interval = 'confidence', level = 0.95))
+```
+
 ### Analysis
 
+There are some differences between the two models. The first model has a higher y-intercept compared to the second one, while the second model has a steeper slope. The confidence intervals for a gamma ray measurement of 38.6 include the actual density of 0.508 of for both models. They lie in the middle of both intervals.
+
 ### Conclusion
+
+The exclusion of densities equal to 0.508 and 0.001 respectively allowed the model to more accurately predict the density of data points that lie outside the range [0.001, 0.508]. This can be seen in the visualizations as well as reflected in the confidence interval for the gain of 38.6
 
 # Advanced Analysis
 In the basic analysis, we fit our data to a linear model and explore why a linear model is not fully representative of the data. In the following section, we will create a fit our data to a nonlinear model using nls(). We are interested in exploring accurately how a **nonlinear least squares** model predicts gamma ray intensity.
@@ -440,7 +456,7 @@ lines(data$density, predictions, col='red')
 Above, we can the the nonlinear least squares model almost fits the data perfectly!
 ### Analysis
 ```{r echo=FALSE}
-summary(nls_model)
+pander(summary(nls_model))
 res <- residuals(nls_model)
 rss <- sum(res ** 2) # residual sum of squares
 tss <- sum((data$gain - mean(data$gain)) ** 2)
@@ -452,3 +468,7 @@ After looking at the summary statistics of our NLS Model, we can see we have an 
 The nonlinear least squares model is a great fit for our data! The R^2 value of 0.998 means that **99.8% of the variance** in the intensity of gamma rays (gain) can be explain by the model. The MSE value of 35.346 is also good; since our Gain values range from ```min(data$gain)``` = 16.2 to ```max(data$gain)``` = 436, the model's predictions are generally close to the actual values. The errors are not excessively large. The average squared error is relatively small compared to the entire range.
 
 # Conclusion & Discussion
+
+In conclusion, the calibration of this gain-to-density model is accurate in its predictions. However, this method of calibration is inherently flawed, as the relationship between gain and density is non-linear, while the models created by this method of calibration are linear. As such, the predictions of this calibration can be inaccurate, especially for data points that our outliers relative to the other data points. 
+
+Some limitations to this data set are that it only shows the measurements for 9 densities, with only 10 gains listed per density. This lack of data could impact the accuracy of the calibration models, as it is a relatively small sample of all possible snow densities. 
